<resources>
    <string name="app_name">Lyon Rewards</string>
    <string name="title_activity_main">Lyon Rewards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_scan_qrcode">Scanner un QR Code</string>
    <string name="menu_tracker">Mes déplacements</string>
    <string name="menu_events">Évènements</string>
    <string name="menu_user_profil">Mon profil</string>
    <string name="menu_rewards">Boutique</string>
    <string name="menu_rankings">Classements</string>
    <string name="menu_account_group_label">Compte</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_logout">Se déconnecter</string>

    <string name="scanner_qrcode_found">Félicitations, vous venez de trouver un QR code !</string>
    <string name="reclaim_points">Récupérer les points</string>

    <string name="scan_prompt">Scanner un QR code pour obtenir des points</string>

    <!-- Strings related to ranking -->
    <string name="ranking_header_position">#</string>
    <string name="ranking_header_username">Utilisateur</string>
    <string name="ranking_header_nb_points">Total de points</string>
    <string name="ranking_header_nb_points_last_24h">Points du jour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_login">Ce pseudo est invalide</string>
    <string name="error_invalid_password">Le mot de passe est invalide</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- GCM -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId">988055759912</string>
    <string name="action_scan_qrcode">Scanner un QR Code</string>
    <string name="scanner_qrcode_already_found">Vous avez déjà récupéré les points de ce QR code.</string>

    <string name="preference_file_user" translatable="false">h4311.hexanome.insa.lyonrewards.PREFERENCE_FILE_KEY</string>
    <string name="no_user">noUser</string>
    <string name="current_user">currentUser</string>

</resources>
