<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/menu_group_top">
        <item
            android:id="@+id/nav_scan_qrcode"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scan_qrcode" />
        <item
            android:id="@+id/nav_tracker"
            android:icon="@drawable/ic_menu_tracker"
            android:title="@string/menu_tracker" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_user_profil"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user_profil" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_rankings" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_rewards" />

    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_group_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_logout" />
    </group>

</menu>
